--- a/2025/usc-ssc/src/style.css
+++ b/2025/usc-ssc/src/style.css
@@ -30,6 +30,14 @@ body {
   min-height: 100vh;
 }
 
+/* style.css */
+html, body, #app {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;   /* clip whatever sticks out */
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -59,7 +67,6 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
