Add SlideTitle component

--- a/2025/usc-ssc/src/styles/slidev-vars.css
+++ b/2025/usc-ssc/src/styles/slidev-vars.css
@@ -17,6 +17,8 @@
   --slidev-code-tab-text-color: #67676c;
   --slidev-code-tab-font-size: 12px;
   --slidev-code-tab-active-text-color: #3c3c43;
+
+  --my-heading-font: "Arial", sans-serif;
 }
 
 html.dark {
