--- a/2025/usc-ssc/src/styles/slidev-layouts.css
+++ b/2025/usc-ssc/src/styles/slidev-layouts.css
@@ -7,6 +7,11 @@
     @apply mt-10;
   }
 
+   h1, h2, h3, h4, h5, h6 {
+    @apply text-[#333]; /* This was your previous color change */
+    font-family: var(--my-heading-font); /* Apply the new font variable */
+  }
+
   h1 {
     @apply text-4xl mb-4 -ml-[0.05em];
   }
